[package]
name = "file-reopen"
version = "0.1.0"
edition = "2018"
description = "reopen file on signal"
license = "MIT"
repository = "https://github.com/polachok/file-reopen"
documentation = "https://docs.rs/file-reopen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.3"
